--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>To Do List</title>
+  <meta charset="UTF-8">
+  <title>To Do List</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
-    <!-- HTML Code -->
-    
-    <script src="script.js"></script>
+  <div class="header">
+    <h2>My To Do List</h2>
+    <div class="input-container">
+      <input type="text" id="taskTitle" placeholder="Task title..." aria-label="Task title">
+      <input type="text" id="taskDescription" placeholder="Description (optional)" aria-label="Task description">
+      <button onclick="addTask()">Add Task</button>
+    </div>
+  </div>
+  <ul class="task-list" id="taskList"></ul>
+  <script src="script.js"></script>
 </body>
 </html>
