--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <button onclick="addTask()">Add Task</button>
     </div>
   </div>
-  <ul class="task-list" id="taskList"></ul>
+  <table class="task-list" id="taskList"></table>
   <script src="script.js"></script>
 </body>
 </html>
