--- a/index.html
+++ b/index.html
@@ -8,14 +8,24 @@
 </head>
 <body>
   <div class="header">
-    <h2>My To Do List</h2>
+    <h1>My To Do List</h1>
     <div class="input-container">
       <input type="text" id="taskTitle" placeholder="Task title..." aria-label="Task title">
       <input type="text" id="taskDescription" placeholder="Description (optional)" aria-label="Task description">
-      <button onclick="addTask()">Add Task</button>
+      <button onclick="addTask()" class="blue">Add Task</button>
     </div>
   </div>
-  <table class="task-list" id="taskList"></table>
+  <table class="task-list">
+    <thead>
+      <td>Completed</td>
+      <td>Task Title</td>
+      <td>Description</td>
+      <td>Edit</td>
+      <td>Delete</td>
+    </thead>
+    <tbody id="taskList">
+    </tbody>
+  </table>
   <script src="script.js"></script>
 </body>
 </html>
